--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -9,21 +9,21 @@ on:
       - master
 
 jobs:
-  eslint:
-    name: eslint
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v2
-    - name: install node v12
-      uses: actions/setup-node@v1
-      with:
-        node-version: 12
-    - name: npm install
-      run: npm install
-    - name: eslint
-      uses: icrawl/action-eslint@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  # eslint:
+  #   name: eslint
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #   - uses: actions/checkout@v2
+  #   - name: install node v12
+  #     uses: actions/setup-node@v1
+  #     with:
+  #       node-version: 12
+  #   - name: npm install
+  #     run: npm install
+  #   - name: eslint
+  #     uses: icrawl/action-eslint@v1
+  #     env:
+  #       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   phpcs:
     name: phpcs
     runs-on: ubuntu-latest
