--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -9,14 +9,14 @@ on:
       - master
 
 jobs:
-  eslint:
-    name: eslint
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: hallee/eslint-action@1.0.3
-        with:
-          repo-token: ${{ secrets.GITHUB_TOKEN }}
+  # eslint:
+  #   name: eslint
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@v2
+  #     - uses: hallee/eslint-action@1.0.3
+  #       with:
+  #         repo-token: ${{ secrets.GITHUB_TOKEN }}
   stylelint:
     name: stylelint
     runs-on: ubuntu-latest
