--- a/.gitattributes
+++ b/.gitattributes
@@ -7,7 +7,7 @@
 .stylelintrc.json export-ignore
 composer.json export-ignore
 composer.lock export-ignore
-package-lock export-ignore
+package-lock.json export-ignore
 package.json export-ignore
 phpcs.xml.dist export-ignore
 README.md export-ignore
