--- a/phpcs.xml.dist
+++ b/phpcs.xml.dist
@@ -39,7 +39,7 @@
 		 Multiple valid text domains can be provided as a comma-delimited list. -->
 	<rule ref="WordPress.WP.I18n">
 		<properties>
-			<property name="text_domain" type="array" value="q" />
+			<property name="text_domain" type="array" value="kiss" />
 		</properties>
 	</rule>
 
