--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
       "dealerdirect/phpcodesniffer-composer-installer": "^0.6.2",
       "wp-coding-standards/wpcs": "^2.3",
       "wptrt/wpthemereview": "*",
-      "szepeviktor/phpstan-wordpress": "^v0.6.6"
+      "szepeviktor/phpstan-wordpress": "^0.6.6"
     },
     "scripts": {
       "build": "git archive --format=zip -o gridd.zip --prefix=gridd/ origin/master .",
