--- a/phpstan.neon.dist
+++ b/phpstan.neon.dist
@@ -1,8 +1,9 @@
 includes:
-    # Include this extension
     - vendor/szepeviktor/phpstan-wordpress/extension.neon
 parameters:
     level: 5
+    # TODO
+    #level: max
     inferPrivatePropertyTypeFromConstructor: true
     paths:
         - comments.php
