--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,9 @@
 {
-    "name": "aristath/a",
+    "name": "aristath/q",
     "type": "wordpress-theme",
     "description": "Q WordPress theme",
     "homepage": "https://aristath.github.io",
-    "license": "GPLv2 or later",
+    "license": "GPL-2.0-or-later",
     "authors": [{
       "name": "aristath",
       "email": "aristath@gmail.com",
@@ -21,9 +21,9 @@
       "szepeviktor/phpstan-wordpress": "^0.6.6"
     },
     "scripts": {
-      "build": "git archive --format=zip -o gridd.zip --prefix=gridd/ origin/master .",
-      "ci:syntax": "find . -type f -not -path './packages/*' -name '*.php' -print0|xargs -0 -P 4 -L 1 -- php -l",
-      "ci:coding-standars": "phpcs . --parallel=4",
+      "build": "git archive --format=zip -o q.zip --prefix=q/ origin/master .",
+      "ci:syntax": "find . -type f -not -path './packages/*' -not -path './vendor/*' -name '*.php' -print0|xargs -0 -P 4 -L 1 -- php -l",
+      "ci:coding-standars": "phpcs --parallel=4 .",
       "ci:static-analysis": "phpstan analyze",
       "test": [
         "@ci:syntax",
