--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -32,13 +32,21 @@ jobs:
       uses: actions-hub/stylelint@master
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  composer:
+    name: composer
+    runs-on: ubuntu-latest
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v2
+    - name: Validate Composer configuration
+      run: composer validate --strict
   phpcs:
     name: phpcs
     runs-on: ubuntu-latest
     steps:
     - name: Checkout
       uses: actions/checkout@v2
-    - name: composer install
+    - name: Install PHP dependencies
       run: composer install
     - name: PHPCS check
       uses: chekalsky/phpcs-action@v1
@@ -50,7 +58,7 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v2
-    - name: composer install
+    - name: Install PHP dependencies
       run: composer install
     - name: PHPStan analysis
       run: composer run-script ci:static-analysis
