--- a/composer.json
+++ b/composer.json
@@ -11,14 +11,14 @@
     "role": "Developer"
   }],
   "require": {
-    "php": ">=5.6"
+    "php": ">=7.3"
   },
   "require-dev": {
-    "composer/installers": "~1.0",
-    "dealerdirect/phpcodesniffer-composer-installer": "^0.6.2",
-    "wp-coding-standards/wpcs": "^2.3",
+    "composer/installers": "*",
+    "dealerdirect/phpcodesniffer-composer-installer": "*",
+    "wp-coding-standards/wpcs": "*",
     "wptrt/wpthemereview": "*",
-    "szepeviktor/phpstan-wordpress": "^0.6.6"
+    "szepeviktor/phpstan-wordpress": "*"
   },
   "scripts": {
     "build": "git archive --format=zip -o q.zip --prefix=q/ origin/master .",
