--- a/.gitattributes
+++ b/.gitattributes
@@ -10,4 +10,5 @@ composer.lock export-ignore
 package-lock.json export-ignore
 package.json export-ignore
 phpcs.xml.dist export-ignore
+phpstan.neon.dist export-ignore
 README.md export-ignore
