Take advantage of core methods

--- a/.gitattributes
+++ b/.gitattributes
@@ -12,3 +12,4 @@ package.json export-ignore
 phpcs.xml.dist export-ignore
 phpstan.neon.dist export-ignore
 README.md export-ignore
+Gruntfile.js export-ignore
